edit swager
